--- a/exercicios/ex022/fundo004.html
+++ b/exercicios/ex022/fundo004.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
@@ -12,10 +12,11 @@
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -26,7 +27,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non alias ipsam error aliquid magnam autem at omnis! Ad dolor, a ea perspiciatis nostrum deleniti aperiam magnam nisi vel eveniet odio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio libero natus eligendi aperiam quod incidunt adipisci, iste sed maxime dolore ut repellat accusamus nam sit nulla cumque doloribus repellendus. Cupiditate. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ex praesentium assumenda, numquam veniam provident dicta eveniet sit rerum atque, ut nisi quas excepturi pariatur quam voluptates quo. Esse, consequatur.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non alias ipsam error aliquid magnam autem at omnis! Ad dolor, a ea perspiciatis nostrum deleniti aperiam magnam nisi vel eveniet odio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio libero natus eligendi aperiam quod incidunt adipisci, iste sed maxime dolore ut repellat accusamus nam sit nulla cumque doloribus repellendus. Cupiditate. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ex praesentium assumenda, numquam veniam provident dicta eveniet sit rerum atque, ut nisi quas excepturi pariatur quam voluptates quo. Esse, consequatur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non alias ipsam error aliquid magnam autem at omnis! Ad dolor, a ea perspiciatis nostrum deleniti aperiam magnam nisi vel eveniet odio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio libero natus eligendi aperiam quod incidunt adipisci, iste sed maxime dolore ut repellat accusamus nam sit nulla cumque doloribus repellendus. Cupiditate. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ex praesentium assumenda, numquam veniam provident dicta eveniet sit rerum atque, ut nisi quas excepturi pariatur quam voluptates quo. Esse, consequatur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non alias ipsam error aliquid magnam autem at omnis! Ad dolor, a ea perspiciatis nostrum deleniti aperiam magnam nisi vel eveniet odio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio libero natus eligendi aperiam quod incidunt adipisci, iste sed maxime dolore ut repellat accusamus nam sit nulla cumque doloribus repellendus. Cupiditate. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ex praesentium assumenda, numquam veniam provident dicta eveniet sit rerum atque, ut nisi quas excepturi pariatur quam voluptates quo. Esse, consequatur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non alias ipsam error aliquid magnam autem at omnis! Ad dolor, a ea perspiciatis nostrum deleniti aperiam magnam nisi vel eveniet odio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio libero natus eligendi aperiam quod incidunt adipisci, iste sed maxime dolore ut repellat accusamus nam sit nulla cumque doloribus repellendus. Cupiditate. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ex praesentium assumenda, numquam veniam provident dicta eveniet sit rerum atque, ut nisi quas excepturi pariatur quam voluptates quo. Esse, consequatur.</p>
     </main>
 </body>
 </html>
